Issue #14084: Fix a file descriptor leak when importing a module with a bad encoding.